# flask-health-template

./: .dockerignore  Dockerfile  pyproject.toml
.github/workflows/: semgrep-pr.yml
app/: __init__.py  appointments_psycopg.py  auth.py  cda_parse.py  clinician_sessions_opensearch.py  config.py  extensions.py  fhir_lab_bundle.py  hl7_cache.py  lab_results.py  models.py  passwords.py  patient_pdf.py  patients.py  pg_backup.py  pharmacy_webhooks.py  reporting.py  reset_tokens.py  routes.py  scan_uploads.py  soap_notes.py  ssn_crypto.py
app/templates/clinical/: visit_soap.html
app/templates/reports/: patient_pdf_summary.html
benchmarks/: k8s-instruct.json  python-instruct.json  vue-instruct.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
k8s/: backend.yaml  frontend.yaml  opensearch.yaml  postgres.yaml  secrets.example.yaml
